--- a/assets/style.css
+++ b/assets/style.css
@@ -16,13 +16,13 @@ body {
     justify-content: center;
 }
 
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#headImg{
+#headImg {
     width: 150px;
     margin-top: 25px;
     height: 35px;
@@ -112,6 +112,7 @@ h1 {
 }
 
 img {
+    height: 100%;
     width: 90%;
     margin: 16px;
     border-radius: 8px;
